--- a/index.html
+++ b/index.html
@@ -260,13 +260,11 @@
             </li>
             <li>ИП не требуется
             </li>
-            <li>Заказы распределяются без учета рейтинга ближай-<br>
-                шим водителям
+            <li>Заказы распределяются без учета рейтинга ближайшим водителям
             </li>
             <li>Работа только по безналичному расчету
             </li>
-            <li>Деньги перечисляем на карту водителю или наличны-<br>
-                ми в офисе
+            <li>Деньги перечисляем на карту водителю или наличными в офисе
             </li>
         </ul>
         <div class="require_descr">
@@ -283,8 +281,7 @@
             </li>
             <li>Без ежедневных выплат по аренде
             </li>
-            <li>Среда пятница и суббота работа на компанию осталь-<br>
-                ные дни вы работаете на себя
+            <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя
         </ul>
         </div>
     </div>
